--- a/docs/D2695955-zh.md
+++ b/docs/D2695955-zh.md
@@ -32,15 +32,14 @@ Version: 2017-06-28 14:34:35 <br>
     * [C:](http://asn.desire2learn.com/resources/S2731551) 理解RDF抽象数据模型是一个有向标记图。
     * [C:](http://asn.desire2learn.com/resources/S2731552)  知道RDF抽象模型的图形化绘制惯例。
         * [D:](http://asn.desire2learn.com/resources/S2731553) 能够使用绘图或建模软件与他人分享RDF模型。
-    * [C:](http://asn.desire2learn.com/resources/S2709875) 理解RDF中的命名空间（namespace），非正式地用于命名空间URI或RDF词汇。这与面向对象中类的数据属性与功能（方法）的命名空间存在本质区别。
-    * [C:](http://asn.desire2learn.com/resources/S2731590) 理解用于RDF词表或命名空间URI的命名空间是如何用于RDF语境中，在功能上与面向对象类的属性和功能的命名空间的差别。
+    * [C:](http://asn.desire2learn.com/resources/S2731590) 理解RDF语境中用于RDF词表或命名空间URI的命名空间在功能上与面向对象类的属性和功能的命名空间是如何具有本质区别的。
 * [B:](http://asn.desire2learn.com/resources/S2696012) 相关数据模型
     * [C:](http://asn.desire2learn.com/resources/S2731554) 掌握语法验证用途（XML）和推理用途（RDF schema）在模式（schemas）上存在的本质区别。
     * [C:](http://asn.desire2learn.com/resources/S2731555)  区分层级式文档模型（XML）与图模型（RDF）。
     * [C:](http://asn.desire2learn.com/resources/S2742440) 理解RDF的类（事物命名集合）与面向对象编程的类的本质区别。面向对象编程的类定义了对象的类型，封装了“状态”（数据值的属性）与“行为”（对状态进行操作的函数）。
 * [B:](http://asn.desire2learn.com/resources/S2696017) RDF 序列化
-    * [C:](http://asn.desire2learn.com/resources/S2709805) 理解RDF序列号格式是一个给定三元组集合（RDF图）的交换编码格式。
-        * [D:](http://asn.desire2learn.com/resources/S2731558) 使用工具在不同的RDF数据序列号格式之间互转。
+    * [C:](http://asn.desire2learn.com/resources/S2709805) 理解RDF序列化格式是一个给定三元组集合（RDF图）的交换编码格式。
+        * [D:](http://asn.desire2learn.com/resources/S2731558) 使用工具在不同的RDF数据序列化格式之间互转。
     * [C:](http://asn.desire2learn.com/resources/S2731556) 区分RDF抽象数据模型与具体的RDF数据的序列化格式。
         * [D:](http://asn.desire2learn.com/resources/S2731557) 用 RDF/XML, N-Triples, Turtle, N3, Trig, JSON-LD, and RDFa对RDF数据序列化表达。
 
@@ -62,15 +61,15 @@ Version: 2017-06-28 14:34:35 <br>
 
 ## [A:](http://asn.desire2learn.com/resources/S2696018) RDF词汇与应用纲要
 * [B:](http://asn.desire2learn.com/resources/S2696044) 发现RDF词汇
-        * [D:](http://asn.desire2learn.com/resources/S2731567) [MOVE] 知道如何通过数据门户与注册系统找到RDF词汇。
+   * [C:](http://asn.desire2learn.com/resources/S2731567)  知道如何通过数据门户与注册系统找到RDF词汇。
         * [D:](http://asn.desire2learn.com/resources/S2696094) 查找<关联开放词汇注册系统>LOV中注册的属性(properties)与类(classes)，理解它们的版本与依赖关系。
 * [B:](http://asn.desire2learn.com/resources/S2731561) 设计RDF词汇
     * [C:](http://asn.desire2learn.com/resources/S2731562)  会用RDF Schema表达词汇表中的语义关系。
         * [D:](http://asn.desire2learn.com/resources/S2731563) 正确使用子类关系，以支持推理。
         * [D:](http://asn.desire2learn.com/resources/S2731564) 正确使用子属性关系，以支持推理。
     * [C:](http://asn.desire2learn.com/resources/S2731566) 重用已发布的可用属性与类。
-    * [C:](http://asn.desire2learn.com/resources/S2731568) Coins namespace URIs, as needed, for any new properties and classes required.
-        * [D:](http://asn.desire2learn.com/resources/S2731569) 草拟类和属性的URI政策。
+    * [C:](http://asn.desire2learn.com/resources/S2731568) 在必要时，为任何基于要求的新属性与类创建命名空间 URIs。
+        * [D:](http://asn.desire2learn.com/resources/S2731569) 草拟为类和属性创建URI的政策。
         * [D:](http://asn.desire2learn.com/resources/S2731570) 选择基于#号（hash）或斜线（slash）的URI模式，视需求而定。
     * [C:](http://asn.desire2learn.com/resources/S2742449) 知道网络本体语言OWL（2004）作为一套RDF词汇，扩展了属性与类，以支持表征型（expressive）数据建模与自动推理。
     * [C:](http://asn.desire2learn.com/resources/S2742450) 知道“本体”一词是模糊的，与RDF词汇有关，但更多是在特定领域中支持推理的OWL类与属性集合。
@@ -141,7 +140,7 @@ Version: 2017-06-28 14:34:35 <br>
         * [D:](http://asn.desire2learn.com/resources/S2742477) 使用工具与便利的功能为经常使用的模式设置快捷方式。例如，匹配真实数据中的多个标签属性。
         * [D:](http://asn.desire2learn.com/resources/S2742478) 使用RDF编程库处理各种类型的SPARQL查询结果。
 * [B:](http://asn.desire2learn.com/resources/S2696087) RDF数据的查询
-    * [C:](http://asn.desire2learn.com/resources/S2708689) Understands that a SPARQL query matches an RDF graph against a pattern of triples with fixed and variable values.
+    * [C:](http://asn.desire2learn.com/resources/S2708689) 理解SPARQL 查询是由常量与变量组成的三元组模式，匹配结果为一个 RDF 图。
     * [C:](http://asn.desire2learn.com/resources/S2708688) 理解SPARQL查询的基本语法。
         * [D:](http://asn.desire2learn.com/resources/S2708691) 使用尖括号来界定URIs。
         * [D:](http://asn.desire2learn.com/resources/S2708692) 使用问号表示变量。
